--- a/app/res/layout/chat_even.xml
+++ b/app/res/layout/chat_even.xml
@@ -1,9 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp" >
+    android:layout_height="wrap_content" >
 
     <com.checkin.avatargenerator.RoundedImageView
         android:id="@+id/avatar"
@@ -15,18 +13,19 @@
         android:id="@+id/chat_holder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#555555"
-        android:padding="5dp"
-        android:layout_toRightOf="@id/avatar" >
+        android:layout_marginRight="20dp"
+        android:layout_toRightOf="@id/avatar"
+        android:background="@drawable/even"
+        android:paddingLeft="15dp" >
 
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/hello_world"
-            android:textColor="@color/grey"
-            android:textSize="16sp" />
-        
+            android:textColor="@color/darker_grey"
+            android:textSize="12sp" />
+
         <TextView
             android:id="@+id/message"
             android:layout_width="wrap_content"
@@ -34,7 +33,7 @@
             android:layout_below="@id/name"
             android:text="@string/hello_world"
             android:textColor="@color/black"
-            android:textSize="18sp" />
+            android:textSize="14sp" />
     </RelativeLayout>
 
 </RelativeLayout>
