--- a/app/res/values/colors.xml
+++ b/app/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="main_color">#0097fd</color>
     <color name="white">#FFFFFF</color>
     <color name="grey">#c2c2c2</color>
+    <color name="darker_grey">#a2a2a2</color>
     <color name="black">#000000</color>
 </resources>
