--- a/app/res/layout/public_chat.xml
+++ b/app/res/layout/public_chat.xml
@@ -2,25 +2,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white" >
+    android:background="@color/white"
+    android:focusable="true"
+    android:focusableInTouchMode="true" >
 
-    <TextView
-        android:id="@+id/city_name"
+    <RelativeLayout
+        android:id="@+id/topBar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:background="@color/main_color"
-        android:paddingBottom="10dp"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp"
-        android:text="@string/hello_world"
-        android:textColor="@color/white"
-        android:textSize="18sp" />
+        android:paddingLeft="10dp" >
+
+        <ImageView
+            android:id="@+id/menu_private"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerVertical="true"
+            android:background="@drawable/circle_white_sel"
+            android:src="@drawable/mail" />
+
+        <TextView
+            android:id="@+id/city_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/menu_private"
+            android:text="@string/hello_world"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+    </RelativeLayout>
 
     <View
         android:id="@+id/sep"
         android:layout_width="match_parent"
         android:layout_height="2px"
-        android:layout_below="@id/city_name"
+        android:layout_below="@id/topBar"
         android:background="#e2e2e2" />
 
     <ListView
@@ -33,6 +50,7 @@
         android:layout_marginRight="10dp"
         android:divider="@null"
         android:dividerHeight="10dp"
+        android:listSelector="@null"
         android:paddingBottom="10dp"
         android:paddingTop="10dp" />
 
