--- a/app/res/values/colors.xml
+++ b/app/res/values/colors.xml
@@ -5,4 +5,8 @@
     <color name="grey">#c2c2c2</color>
     <color name="darker_grey">#a2a2a2</color>
     <color name="black">#000000</color>
+    <color name="pale_green">#8000E600</color>
+    <color name="darker_green">#CC00E600</color>
+    <color name="pale_red">#80DD0000</color>
+    <color name="darker_red">#CCDD0000</color>
 </resources>
