--- a/app/res/layout/dialog_yes_no.xml
+++ b/app/res/layout/dialog_yes_no.xml
@@ -16,6 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="10dp"
+            android:gravity="center"
             android:text="@string/want_to_delete"
             android:textColor="@android:color/white"
             android:textSize="15sp"
