--- a/app/res/layout/private_item.xml
+++ b/app/res/layout/private_item.xml
@@ -7,9 +7,21 @@
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="10dp"
         android:text="@string/hello_world"
         android:textColor="@color/white"
         android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/mutual"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/name"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="5dp"
+        android:text="@string/hello_world"
+        android:textColor="@color/grey"
+        android:textSize="12sp" />
 
 </RelativeLayout>
