--- a/app/res/layout/private_item.xml
+++ b/app/res/layout/private_item.xml
@@ -19,9 +19,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/name"
         android:layout_marginBottom="10dp"
+        android:layout_marginLeft="15dp"
         android:layout_marginTop="5dp"
         android:text="@string/hello_world"
-        android:textColor="@color/grey"
+        android:textColor="#e2e2e2"
         android:textSize="12sp" />
 
 </RelativeLayout>
