--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p id="logo-blindr" style="font-family:Raleway">b</p>
+                    <p class="circle" id="logo-blindr" style="font-family:Raleway">b</p>
                     <div class="intro-text">
                         <span class="name">{{ site.title }}</span>
                         <hr class="star-light">
