--- a/app/res/layout/private_item.xml
+++ b/app/res/layout/private_item.xml
@@ -3,11 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
 
+    <com.checkin.avatargenerator.RoundedImageView
+        android:id="@+id/avatar"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="15dp"
+        android:background="@drawable/circle_white"
+        android:src="@drawable/send" />
+
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
+        android:layout_marginLeft="80dp"
         android:layout_marginTop="10dp"
         android:text="@string/hello_world"
         android:textColor="@color/white"
@@ -19,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/name"
         android:layout_marginBottom="10dp"
-        android:layout_marginLeft="15dp"
+        android:layout_marginLeft="80dp"
         android:layout_marginTop="5dp"
         android:text="@string/hello_world"
         android:textColor="#e2e2e2"
