--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -46,7 +46,7 @@ src: url("/css/raleway/fonts/Raleway_Thin.otf") format("opentype");
 width:200px;
 height:200px;
 border-radius:50%;
-font-size:50px;
+font-size:100px;
 color:#0097fd;
 line-height:200px;
 text-align:center;
@@ -114,7 +114,7 @@ header img {
 
 header .intro-text .name {
     display: block;
-    text-transform: uppercase;
+    text-transform: lowercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 2em;
     font-weight: 700;
