--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,13 +19,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#preview">Preview</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#features">Features</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">About</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
