--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -1,6 +1,6 @@
 
     <!-- Portfolio Grid Section -->
-    <section id="portfolio">
+    <section id="preview">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
