--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,9 +1,9 @@
  <!-- About Section -->
-    <section class="success" id="features">
+    <section class="success" id="intro">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Features</h2>
+                    <h2>Introduction</h2>
                     <hr class="star-light">
                 </div>
             </div>
@@ -13,14 +13,6 @@
                 </div>
                 <div class="col-lg-4">
                     <p>Introducing blindr, the geolocation-based, anonymous meetup app! blindr drops you in a chatroom populated with the brightest folks in town, while remaining anonymous! blindr allows chatees to « show interest » in one another, matching them personally, revealing their identity. This type of interaction will help you get through your blatant social anxiety and perhaps eventually, meet your soul-mate!</p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center" style="font-size:20px">
-                  <ul>
-                    <li>Entirely anonymous!</li>
-                    <li>Awkward-free!</li>
-                    <li>No social interaction required!</li>
-                    <li>FREE!</li>
-                  </ul>
                 </div>
             </div>
         </div>
