--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -22,7 +22,7 @@
                         <a href="#preview">Preview</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#features">Features</a>
+                        <a href="#intro">Features</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
