--- a/app/res/layout/connect_facebook.xml
+++ b/app/res/layout/connect_facebook.xml
@@ -9,10 +9,17 @@
         android:id="@+id/authButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp"
-        android:drawableLeft="@drawable/com_facebook_button_blue"
+        android:drawableLeft="@drawable/com_facebook_button_blue" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        />
+        android:visibility="gone" />
 
 </RelativeLayout>
