--- a/app/res/values/colors.xml
+++ b/app/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="darker_green">#CC00E600</color>
     <color name="pale_red">#80DD0000</color>
     <color name="darker_red">#CCDD0000</color>
+    <color name="pink">#FFCCFF</color>
 </resources>
