--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -9,7 +9,9 @@
                 </div>
             </div>
             <div class="row">
-              <iframe width="420" height="315" src="https://www.youtube.com/embed/8LqSb_sDDJU" frameborder="0" allowfullscreen></iframe>
+              <center>
+                <iframe width="420" height="315" src="https://www.youtube.com/embed/8LqSb_sDDJU" frameborder="0" allowfullscreen></iframe>
+              </center>
             </div>
         </div>
     </section>
