--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -10,7 +10,7 @@
             </div>
             <div class="row">
               <center>
-                <iframe width="400" height="600" src="https://www.youtube.com/embed/8LqSb_sDDJU" frameborder="0" allowfullscreen></iframe>
+                <iframe width="400" height="600" style="width: 100%; max-width: 400px" src="https://www.youtube.com/embed/8LqSb_sDDJU" frameborder="0" allowfullscreen></iframe>
               </center>
             </div>
         </div>
