--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -8,10 +8,12 @@
                     <hr class="star-primary">
                 </div>
             </div>
-            <div class="row">
-              <center>
-                <iframe width="400" height="600" style="width: 100%; max-width: 400px" src="https://www.youtube.com/embed/8LqSb_sDDJU" frameborder="0" allowfullscreen></iframe>
-              </center>
+            <div class="container">
+              <div class="row row-centered">
+                <div class="col-centered">
+                  <iframe height="600" style="width: 100%; max-width: 400px" src="https://www.youtube.com/embed/8LqSb_sDDJU" frameborder="0" allowfullscreen></iframe>
+                </div>
+              </div>
             </div>
         </div>
     </section>
