--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -11,7 +11,7 @@
             <div class="container">
               <div class="row row-centered">
                 <div class="col-centered">
-                  <iframe height="600" style="width: 100%; max-width: 400px" src="https://www.youtube.com/embed/8LqSb_sDDJU" frameborder="0" allowfullscreen></iframe>
+                  <a class=".img-centered" href="/img/nexus.png"/>
                 </div>
               </div>
             </div>
