--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -11,7 +11,7 @@
             <div class="container">
               <div class="row row-centered">
                 <div class="col-centered">
-                  <a class=".img-centered" href="/img/nexus.png"/>
+                  <img class=".img-centered" src="/img/nexus.png"/>
                 </div>
               </div>
             </div>
