Matches are now fixed Real names in public chat when it's mutual User can now see matches by sliding the menu Less OutOfMemory errors in slideshow, need to investigate more Slideshow UI revamped Needs to fix onTouch error on some devices Needs to find out why private messages are not in order

--- a/app/res/layout/public_chat_container.xml
+++ b/app/res/layout/public_chat_container.xml
@@ -8,6 +8,6 @@
     sliding:fadeDegree="0.5"
     sliding:fadeEnabled="true"
     sliding:selectorEnabled="false"
-    sliding:touchModeAbove="none"
+    sliding:touchModeAbove="margin"
     sliding:viewAbove="@layout/public_chat"
     sliding:viewBehind="@layout/private_chat_list" />
