Fixed #4 , waiting now even looks good Working on #6 again, something doesn't seem to go through GC Fixed #7 Tweaked the layout, it's now a heart instead of a message icon to open matches, cuz you know, consistency.
Signed-off-by: Marc-Antoine Hinse <marc_antoine_hinse@hotmail.com>

--- a/app/res/layout/connect_facebook.xml
+++ b/app/res/layout/connect_facebook.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ProgressWheel="http://schemas.android.com/apk/res/com.mchacks.blindr"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,12 +15,19 @@
         android:layout_marginTop="30dp"
         android:drawableLeft="@drawable/com_facebook_button_blue" />
 
-    <ProgressBar
+    <com.todddavies.components.progressbar.ProgressWheel
         android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_centerInParent="true"
+        ProgressWheel:barColor="@color/dark_main_color"
+        ProgressWheel:barLength="80dp"
+        ProgressWheel:barWidth="5dp"
+        ProgressWheel:rimColor="@color/white"
+        ProgressWheel:rimWidth="5dp"
+        ProgressWheel:text="@string/authenticating"
+        ProgressWheel:textColor="@color/white"
+        ProgressWheel:textSize="15sp"
         android:visibility="gone" />
 
 </RelativeLayout>
