--- a/app/res/layout/public_chat.xml
+++ b/app/res/layout/public_chat.xml
@@ -19,7 +19,8 @@
             android:layout_height="40dp"
             android:layout_centerVertical="true"
             android:background="@drawable/circle_white_sel"
-            android:src="@drawable/mail" />
+            android:src="@drawable/heart"
+            android:tint="@color/main_color" />
 
         <TextView
             android:id="@+id/city_name"
