Image wasn't reachable from new domain

--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -11,7 +11,7 @@
             <div class="container">
               <div class="row row-centered">
                 <div class="col-centered">
-                  <img class=".img-centered" style="max-width: 100%" src="/blindr/img/nexus.png"/>
+                  <img class=".img-centered" style="max-width: 100%" src="/img/nexus.png"/>
                 </div>
               </div>
             </div>
