--- a/app/res/layout/connect_facebook.xml
+++ b/app/res/layout/connect_facebook.xml
@@ -1,5 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ProgressWheel="http://schemas.android.com/apk/res/com.mchacks.blindr"
+    xmlns:ProgressWheel="http://schemas.android.com/apk/res/com.lesgens.blindr"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
