--- a/app/res/layout/slideshow.xml
+++ b/app/res/layout/slideshow.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ProgressWheel="http://schemas.android.com/apk/res/com.mchacks.blindr"
+    xmlns:ProgressWheel="http://schemas.android.com/apk/res/com.lesgens.blindr"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/black"
