--- a/app/res/layout/chat_even.xml
+++ b/app/res/layout/chat_even.xml
@@ -74,6 +74,16 @@
                 android:text="@string/hello_world"
                 android:textColor="@color/black"
                 android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/message"
+                android:layout_marginTop="3dp"
+                android:text="@string/hello_world"
+                android:textColor="@color/darker_grey"
+                android:textSize="11sp" />
         </RelativeLayout>
     </RelativeLayout>
     <!-- Surface View End -->
