--- a/app/res/layout/private_chat.xml
+++ b/app/res/layout/private_chat.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:StickyListHeadersListView="http://schemas.android.com/apk/res/com.lesgens.blindr"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -51,7 +52,7 @@
         android:layout_below="@id/topBar"
         android:background="#e2e2e2" />
 
-    <ListView
+    <se.emilsjolander.stickylistheaders.StickyListHeadersListView
         android:id="@+id/list"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -59,13 +60,13 @@
         android:layout_below="@id/sep"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        StickyListHeadersListView:hasStickyHeaders="false"
         android:cacheColorHint="@android:color/transparent"
-        android:divider="@null"
+        android:divider="@color/transparent"
         android:dividerHeight="10dp"
         android:listSelector="@android:color/transparent"
         android:overScrollMode="never"
         android:paddingBottom="10dp"
-        android:paddingTop="10dp"
         android:scrollbars="none" />
 
     <RelativeLayout
