New Chat screen for public chats, just like private ones

--- a/app/res/layout/private_chat.xml
+++ b/app/res/layout/private_chat.xml
@@ -67,7 +67,8 @@
         android:listSelector="@android:color/transparent"
         android:overScrollMode="never"
         android:paddingBottom="10dp"
-        android:scrollbars="none" />
+        android:scrollbars="none"
+        android:stackFromBottom="true" />
 
     <RelativeLayout
         android:id="@+id/bottomBar"
