--- a/app/res/values/attrs.xml
+++ b/app/res/values/attrs.xml
@@ -87,6 +87,7 @@
         <attr name="android:divider" />
         <attr name="android:dividerHeight" />
         <attr name="android:transcriptMode" />
+        <attr name="android:stackFromBottom" />
 
         <!-- StickyListHeaders attributes -->
 
