--- a/app/res/layout/private_chat.xml
+++ b/app/res/layout/private_chat.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:StickyListHeadersListView="http://schemas.android.com/apk/res/com.lesgens.blindr"
+    xmlns:slideshow="http://schemas.android.com/apk/res/com.lesgens.blindr"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -12,16 +13,27 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/main_color"
-        android:paddingLeft="10dp"
+        android:paddingLeft="5dp"
         android:paddingRight="10dp" >
+
+        <ImageView
+            android:id="@+id/back"
+            android:layout_width="30dp"
+            android:layout_height="40dp"
+            android:layout_centerVertical="true"
+            android:background="@drawable/gen_sel"
+            android:src="@drawable/back_arrow"
+            android:tint="@color/white" />
 
         <com.checkin.avatargenerator.RoundedImageView
             android:id="@+id/avatar"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_centerVertical="true"
-            android:background="@drawable/circle_white_sel"
-            android:src="@drawable/mail" />
+            android:scaleType="fitCenter"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/back"
+            android:background="@drawable/circle_white_sel" />
 
         <TextView
             android:id="@+id/fbName"
@@ -57,12 +69,20 @@
         android:textSize="12sp"
         android:visibility="gone" />
 
+    <com.lesgens.blindr.views.SlideshowView
+        android:id="@+id/slideshow"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
+        android:layout_below="@id/connection_problem"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone" />
+
     <se.emilsjolander.stickylistheaders.StickyListHeadersListView
         android:id="@+id/list"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_above="@+id/bottomBar"
-        android:layout_below="@id/connection_problem"
+        android:layout_below="@id/slideshow"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         StickyListHeadersListView:hasStickyHeaders="false"
@@ -74,6 +94,14 @@
         android:paddingBottom="10dp"
         android:scrollbars="none"
         android:stackFromBottom="true" />
+
+    <View
+        android:id="@+id/slideshow_sep"
+        android:layout_width="wrap_content"
+        android:layout_height="10dp"
+        android:layout_below="@id/slideshow"
+        android:background="@drawable/bottom_shadow"
+        android:visibility="gone" />
 
     <RelativeLayout
         android:id="@+id/bottomBar"
