--- a/app/res/layout/chat_even_private.xml
+++ b/app/res/layout/chat_even_private.xml
@@ -10,6 +10,14 @@
         android:paddingLeft="15dp"
         android:paddingRight="10dp" >
 
+        <ImageView
+            android:id="@+id/picture"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_below="@id/name"
+            android:scaleType="centerCrop"
+            android:visibility="gone" />
+
         <TextView
             android:id="@+id/message"
             android:layout_width="wrap_content"
