--- a/app/res/layout/chat_odd.xml
+++ b/app/res/layout/chat_odd.xml
@@ -13,6 +13,14 @@
         android:paddingLeft="10dp"
         android:paddingRight="15dp" >
 
+        <ImageView
+            android:id="@+id/picture"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_below="@id/name"
+            android:scaleType="centerCrop"
+            android:visibility="gone" />
+
         <TextView
             android:id="@+id/message"
             android:layout_width="wrap_content"
