--- a/app/res/layout/private_chat.xml
+++ b/app/res/layout/private_chat.xml
@@ -118,12 +118,24 @@
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:layout_toLeftOf="@+id/send"
+            android:layout_toLeftOf="@+id/send_picture"
             android:background="@drawable/rounded_edittext"
             android:gravity="center_vertical"
             android:inputType="textCapSentences"
             android:paddingLeft="10dp"
             android:paddingRight="10dp" />
+        
+        <ImageView
+            android:id="@+id/send_picture"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_toLeftOf="@+id/send"
+            android:background="@drawable/gen_black_sel"
+            android:padding="5dp"
+            android:src="@android:drawable/ic_menu_camera" />
 
         <ImageView
             android:id="@+id/send"
