--- a/app/res/drawable/dialog_bg.xml
+++ b/app/res/drawable/dialog_bg.xml
@@ -4,8 +4,8 @@
     android:padding="10dp"
     android:shape="rectangle" >
 
-    <solid android:color="@color/main_color" />
-
+    <stroke android:width="2px" android:color="@color/white"/>
+    <solid android:color="@color/main_color"/>
     <corners
         android:radius="10dp" />
 
