--- a/app/res/layout/chat_even.xml
+++ b/app/res/layout/chat_even.xml
@@ -88,6 +88,7 @@
                 android:id="@+id/time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
                 android:layout_below="@id/message"
                 android:layout_marginTop="3dp"
                 android:text="@string/hello_world"
