--- a/app/res/layout/chat_even_private.xml
+++ b/app/res/layout/chat_even_private.xml
@@ -6,17 +6,10 @@
         android:id="@+id/chat_holder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginRight="58dp"
         android:background="@drawable/chat_incoming"
         android:paddingLeft="15dp"
         android:paddingRight="10dp" >
-
-        <ImageView
-            android:id="@+id/picture"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_below="@id/name"
-            android:scaleType="centerCrop"
-            android:visibility="gone" />
 
         <TextView
             android:id="@+id/message"
@@ -30,11 +23,32 @@
             android:id="@+id/time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:layout_below="@id/message"
             android:layout_marginTop="3dp"
             android:text="@string/hello_world"
             android:textColor="@color/darker_grey"
             android:textSize="11sp" />
     </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/picture"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginRight="58dp"
+        android:paddingLeft="6dp"
+        android:scaleType="centerCrop"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/time_picture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="68dp"
+        android:paddingBottom="5dp"
+        android:text="@string/hello_world"
+        android:textColor="@color/white"
+        android:textSize="11sp" />
 
 </RelativeLayout>
