--- a/app/res/layout/chat_odd.xml
+++ b/app/res/layout/chat_odd.xml
@@ -13,14 +13,6 @@
         android:paddingLeft="10dp"
         android:paddingRight="15dp" >
 
-        <ImageView
-            android:id="@+id/picture"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_below="@id/name"
-            android:scaleType="centerCrop"
-            android:visibility="gone" />
-
         <TextView
             android:id="@+id/message"
             android:layout_width="wrap_content"
@@ -33,11 +25,31 @@
             android:id="@+id/time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:layout_below="@id/message"
-            android:layout_marginTop="3dp"
             android:text="@string/hello_world"
             android:textColor="@color/darker_grey"
             android:textSize="11sp" />
     </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/picture"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginLeft="58dp"
+        android:paddingRight="6dp"
+        android:scaleType="centerCrop"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/time_picture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:paddingBottom="5dp"
+        android:layout_marginLeft="68dp"
+        android:text="@string/hello_world"
+        android:textColor="@color/white"
+        android:textSize="11sp" />
 
 </RelativeLayout>
