--- a/app/res/layout/splashscreen.xml
+++ b/app/res/layout/splashscreen.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:ProgressWheel="http://schemas.android.com/apk/res/com.lesgens.blindr"
@@ -9,7 +10,8 @@
         android:id="@+id/splash_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="80dp"
         android:text="@string/app_name"
         android:textColor="@color/white"
         android:textSize="40sp" />
