--- a/app/res/values/colors.xml
+++ b/app/res/values/colors.xml
@@ -17,4 +17,25 @@
     <color name="transparent">#00000000</color>
     <color name="red">#FF6666</color>
     <color name="faded_white">#26FFFFFF</color>
+    
+     <color name="bg_color_transparent">#AA000000</color>
+    <color name="bg_overlay">#99000000</color>
+    <color name="bg_chat">#F0F7FF</color>
+    <color name="bg_main">@color/brown_light</color>
+    <color name="bg_profile">@color/brown_light</color>
+
+    <!-- Black -->
+    <color name="black_transparent">#44000000</color>
+
+    <!-- Browns -->
+    <color name="brown_light">#FBEDDE</color>
+    <color name="brown_dark">#FF44130C</color>
+    <color name="brown">#FFC18E80</color>
+    <!-- /Browns -->
+
+
+    <!-- Blue -->
+    <color name="blue_link">#FF3366BB</color>
+
+    <!-- /Blue -->
 </resources>
