--- a/app/res/layout/pick_interested_in.xml
+++ b/app/res/layout/pick_interested_in.xml
@@ -5,67 +5,114 @@
     android:layout_height="match_parent"
     android:background="@color/main_color" >
 
-    <TextView
-        android:id="@+id/splash_text_interested_in"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="80dp"
-        android:text="@string/app_name"
-        android:textColor="@color/white"
-        android:textSize="40sp" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/button_container"
+        android:overScrollMode="never"
+        android:scrollbars="none" >
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/splash_text_interested_in"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="20dp"
-        android:orientation="vertical" >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
-        <ImageView
-            android:id="@+id/avatar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:src="@drawable/avatar_bg" />
+            <TextView
+                android:id="@+id/splash_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="40dp"
+                android:text="@string/app_name"
+                android:textColor="@color/white"
+                android:textSize="40sp" />
+
+            <LinearLayout
+                android:id="@+id/main_container"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/splash_text"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:orientation="vertical" >
+
+                <com.checkin.avatargenerator.RoundedImageView
+                    android:id="@+id/avatar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:background="@drawable/circle_white_sel"
+                    android:src="@drawable/avatar_bg" />
+
+                <TextView
+                    android:id="@+id/interested_in"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:text="@string/interested_in"
+                    android:textColor="@color/white"
+                    android:textSize="22sp" />
+
+                <CheckBox
+                    android:id="@+id/checkBox_men"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:button="@drawable/white_checkbox"
+                    android:padding="8dp"
+                    android:text="@string/women"
+                    android:textColor="@color/white"
+                    android:textSize="20sp" />
+
+                <CheckBox
+                    android:id="@+id/checkBox_women"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:button="@drawable/white_checkbox"
+                    android:padding="8dp"
+                    android:text="@string/men"
+                    android:textColor="@color/white"
+                    android:textSize="20sp" />
+
+                <CheckBox
+                    android:id="@+id/checkBox_other"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:button="@drawable/white_checkbox"
+                    android:padding="8dp"
+                    android:text="@string/other"
+                    android:textColor="@color/white"
+                    android:textSize="20sp" />
+            </LinearLayout>
+        </RelativeLayout>
+    </ScrollView>
+
+    <RelativeLayout
+        android:id="@+id/button_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/main_color" >
 
         <TextView
-            android:id="@+id/interested_in"
+            android:id="@+id/back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="@string/interested_in"
+            android:background="@drawable/gen_sel"
+            android:padding="15dp"
+            android:text="@string/back"
             android:textColor="@color/white"
             android:textSize="22sp" />
 
-        <CheckBox
-            android:id="@+id/checkBox_men"
+        <TextView
+            android:id="@+id/next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:button="@drawable/white_checkbox"
-            android:text="@string/women"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/gen_sel"
+            android:padding="15dp"
+            android:text="@string/finish"
             android:textColor="@color/white"
-            android:textSize="20sp" />
-
-        <CheckBox
-            android:id="@+id/checkBox_women"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:button="@drawable/white_checkbox"
-            android:text="@string/men"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
-
-        <CheckBox
-            android:id="@+id/checkBox_other"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:button="@drawable/white_checkbox"
-            android:text="@string/other"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
-    </LinearLayout>
+            android:textSize="22sp" />
+    </RelativeLayout>
 
 </RelativeLayout>
