--- a/app/res/layout/slideshow.xml
+++ b/app/res/layout/slideshow.xml
@@ -13,6 +13,7 @@
             android:id="@+id/pictures_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|top"
             android:orientation="horizontal" >
         </LinearLayout>
     </HorizontalScrollView>
