First time use mostly done, need to change the text Fixed #14
Signed-off-by: Marc-Antoine Hinse <marc_antoine_hinse@hotmail.com>

--- a/app/res/layout/activity_fb_photo_picker.xml
+++ b/app/res/layout/activity_fb_photo_picker.xml
@@ -15,7 +15,8 @@
     <ListView
         android:id="@+id/listView_albums"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:background="@color/main_color" >
     </ListView>
 
     <!-- A global progress spinner overlay so we don't have to reimplement this everywhere -->
