--- a/app/res/layout/view_album_list_item.xml
+++ b/app/res/layout/view_album_list_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="84dp"
-    android:background="@color/main_color"
+    android:background="@drawable/gen_sel"
     android:gravity="center_vertical|left"
     android:orientation="horizontal" >
 
